fix: 简单模拟 ai调用 结果，向量值存入pgsql